<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Anons</string>
    <string name="app_name_cap">ANONS</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="or">or</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot My Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="e_mail">E-Mail</string>
    <string name="dob">Date Of Birth</string>
    <string name="sex">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string-array name="sex">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>
    <string name="invalid_login">Invalid Username or Password</string>
    <string name="empty_warning">Field can\'t be empty</string>
    <string name="email_warning">Please enter a valid email</string>
    <string name="password_warning">Pasword too weak</string>
    <string name="username_warning">Username too long</string>
    <string name="dob_warning">Choose a date</string>
    <string name="friends">Friends</string>
    <string name="anons">Anons</string>
    <string name="likes">Likes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_me">ABOUT ME</string>
    <string name="registering_user">Registering User</string>
    <string name="please_wait">Please wait a while.</string>
    <string name="user_registering_fail">We couldn\'t create a user, please try again.</string>
    <string name="verification_info">Check Your Mail To Confirm Your Account.. It Can Be In Spam Box.</string>
    <string name="send_again">Send Again</string>
    <string name="email_didnt_come">You Didn\'t Receive An E-mail?</string>
    <string name="show_anons">View Anons</string>
    <string name="processing">Processing...</string>
    <string name="email_send">E-mail has been sent.</string>
    <string name="an_error_occurred">An Error has occurred. Please contact with us.</string>
    <string name="internet_connection_error">Please Check Your Internet Connection.</string>
    <string name="username_empty">Please enter your username or e-mail address.</string>
    <string name="password_empty">Please enter your password.</string>
    <string name="next">Go</string>
    <string name="hide_anons">Hide Anons</string>
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>

    <string name="username_kontrol">Username is being checked</string>
    <string name="username_already">Username has already been taken.</string>
    <string name="email_control">E-mail is being checked.</string>
    <string name="email_already">E-mail has already been taken.</string>
    <string name="profilPhoto_download_error">Profil photo download error.</string>
    <string name="backgroundPhoto_download_error">Background photo download error.</string>
    <string name="user_info_error">User information download error.</string>
    <string name="connection_timeout">Connection Timeout</string>

    <string name="opinion_suggestions">opinions and suggestions</string>
    <string name="opinion">Opinion</string>
    <string name="suggestion">Suggestion</string>
    <string-array name="opinion_suggestions" tools:ignore="InconsistentArrays">
        <item>@string/opinion</item>
        <item>@string/suggestion</item>
    </string-array>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="false">Weather</string>
</resources>
