<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingTop="10dp"
    android:paddingRight="40dp">


    <TextView

        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anonsfont"
        android:text="@string/app_name_cap"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameWrapper"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/username"
        android:textColorHint="@android:color/darker_gray"

        >
        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:ems="10"
            android:fontFamily="@font/anons_fontt"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:theme="@style/MyEditTextStyle2" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameWrapper"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:hint="@string/name"
            android:textColorHint="@android:color/darker_gray">
            <EditText
                android:theme="@style/MyEditTextStyle2"
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:drawableStart="@drawable/ic_perm_contact_calendar_black_24dp"
                android:ems="10"
                android:fontFamily="@font/anons_fontt"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/surnameWrapper"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:hint="@string/surname"
            android:textColorHint="@android:color/darker_gray">

            <EditText
                android:id="@+id/surnameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:fontFamily="@font/anons_fontt"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:theme="@style/MyEditTextStyle2" />
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailWrapper"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:layout_width="match_parent"
        android:textColorHint="@android:color/darker_gray">
        <EditText
            android:theme="@style/MyEditTextStyle2"
            android:id="@+id/emailEditText"
            android:hint="@string/e_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:ems="10"
            android:fontFamily="@font/anons_fontt"
            android:inputType="textPersonName|textWebEmailAddress"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordWrappper"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/darker_gray">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:ems="10"
            android:fontFamily="@font/anons_fontt"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:theme="@style/MyEditTextStyle2"
            android:textStyle="bold"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dobEditText"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableStart="@drawable/ic_today_black_24dp"
            android:focusable="false"
            android:fontFamily="@font/anons_fontt"
            android:hint="@string/dob"
            android:onClick="kayitOlClicks"
            android:paddingStart="5dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="30dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <Button
        android:id="@+id/signUpOkeyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/buton_signup"
        android:fontFamily="@font/anons_fontt"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>