<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilEkran">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/OpacityGray"
        tools:context=".ProfilEkran">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite">

            <ImageView
                android:id="@+id/profilBackgroundImageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/cukur" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.36" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="392dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/profil_bilgi_background"
                android:orientation="vertical"
                android:paddingTop="80dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline5">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/profilAdSayodYasTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Şerefcan OGUZ, 21 "
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        app:fontFamily="@font/anons_fontt" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="0dp">

                    <TextView
                        android:id="@+id/profildurumTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:paddingLeft="45dp"
                        android:text="Şerefcan OGUZ, 21 "
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        app:fontFamily="@font/infotextfont"
                        tools:text="Gazi Üniversitesi BM" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="2dp">

                    <TextView
                        android:id="@+id/arkadasTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="Arkadaş"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        app:fontFamily="@font/anons_fontt"
                        tools:text="@string/friends" />

                    <TextView
                        android:id="@+id/bildirimTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/anons"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        app:fontFamily="@font/anons_fontt" />

                    <TextView
                        android:id="@+id/begeniTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/likes"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        app:fontFamily="@font/anons_fontt" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/arkadasImageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:scaleType="fitEnd"
                            app:srcCompat="@drawable/ic_arkadas" />

                        <TextView
                            android:id="@+id/arkadasSayisiTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingLeft="7dp"
                            android:paddingTop="5dp"
                            android:text="0"
                            android:textColor="@android:color/black"
                            app:fontFamily="@font/anons_fontt" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/bildirimImageView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:scaleType="fitEnd"
                            app:srcCompat="@drawable/ic_bildiri" />

                        <TextView
                            android:id="@+id/bildirimSayisiTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingLeft="7dp"
                            android:paddingTop="5dp"
                            android:text="0"
                            android:textColor="@android:color/black"
                            app:fontFamily="@font/anons_fontt" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/begeniImageView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:scaleType="fitEnd"
                            app:srcCompat="@drawable/ic_like" />

                        <TextView
                            android:id="@+id/begeniSayisiTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingLeft="7dp"
                            android:paddingTop="5dp"
                            android:text="0"
                            android:textColor="@android:color/black"
                            app:fontFamily="@font/anons_fontt" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:paddingTop="5dp">

                    <Button
                        android:id="@+id/profiliDuzenleButton"
                        android:layout_width="313dp"
                        android:layout_height="39dp"
                        android:background="@drawable/profili_duzenle_button"
                        android:fontFamily="@font/anons_fontt"
                        android:paddingLeft="40dp"
                        android:paddingRight="40dp"
                        android:text="Profili Düzenle"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <android.support.constraint.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.26" />

            <ImageView
                android:id="@+id/df_Avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline5"
                app:srcCompat="@drawable/hsn" />

            <ImageButton
                android:id="@+id/settingsImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_settings_black_24dp" />

            <Button
                android:id="@+id/geciciButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>


</FrameLayout>
